K8s/network-policies/policies/allow-curl.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector: 
    matchLabels:
      app: urban-aura
  policyTypes:
    - Ingress
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            app: urban-aura-curl 


# required calico 
# minikube delete
# minikube start -p netpol --cni calico
