K8s/network-policies/policies/allow-urban-aura.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-urban-aura
spec:
  podSelector: 
    matchLabels:
      app: urban-aura-curl
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
             app: urban-aura
