K8s/network-policies/policies/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
spec:
  podSelector: {}   # Selects all pods in the namespace
  policyTypes:
    - Ingress
    - Egress
  # ingress: []        # Empty ingress = deny all ingress traffic


# required calico 
# minikube delete
# minikube start -p netpol --cni calico
